--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ haxe:
   - "3.4.7"
   - development
 
-neko: "2.2.0"
+#neko: "2.2.0"
 
-matrix:
+#matrix:
   # Allow Haxe development to fail.
   #allow_failures:
   #  - haxe: development
@@ -29,8 +29,8 @@ addons:
   apt:
     packages:
       # C++ (for rebuilding hxcpp)
-      - gcc-multilib
-      - g++-multilib
+      #- gcc-multilib
+      #- g++-multilib
       # Python
       #- python3
       # C#
@@ -75,24 +75,24 @@ install:
   # Download and setup a standalone flash player debugger
   - haxe flash/install.hxml
   # Install haxelibs
-  - if [ "${TRAVIS_HAXE_VERSION}" = "development" ]; then
-      haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp.git;
-      pushd $(haxelib path hxcpp | head -1);
-        pushd tools/hxcpp; haxe compile.hxml; popd;
-        pushd project; neko build.n; popd;
-      popd;
-    else
-      haxelib install hxcpp;
-    fi
+  #- if [ "${TRAVIS_HAXE_VERSION}" = "development" ]; then
+  #    haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp.git;
+  #    pushd $(haxelib path hxcpp | head -1);
+  #      pushd tools/hxcpp; haxe compile.hxml; popd;
+  #      pushd project; neko build.n; popd;
+  #    popd;
+  #  else
+  #    haxelib install hxcpp;
+  #  fi
   #- haxelib install hxjava
   #- haxelib install hxcs
   - haxelib list
 
 script:
-  - haxe build-interp.hxml
+  #- haxe build-interp.hxml
   #- haxe build-neko.hxml         && neko bin/HelloWorld.n
   - haxe build-js.hxml           && node bin/HelloWorld.js
-                                 && haxe phantomjs/run.hxml bin/HelloWorld.js
+                                 #&& haxe phantomjs/run.hxml bin/HelloWorld.js
   #- haxe build-java.hxml         && java -jar bin/HelloWorld.jar
   #- haxe build-php.hxml          && php bin/index.php
   #- haxe build-cs.hxml           && mono bin/bin/HelloWorld.exe
