--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: haxe
 # Let's enable both linux and mac builds because why not?
 os:
   - linux
+  - windows
   - osx
 
 # Let's use Ubuntu Trusty instead of Precise, which reached its EOL on April 28, 2017.
@@ -16,11 +17,6 @@ haxe:
 
 #neko: "2.2.0"
 
-#matrix:
-  # Allow Haxe development to fail.
-  #allow_failures:
-  #  - haxe: development
-
 addons:
   # This is the preferred way to install apt packages.
   # However, it only allow some but not all packages.
@@ -28,75 +24,16 @@ addons:
   # http://docs.travis-ci.com/user/apt/#Adding-APT-Packages
   apt:
     packages:
-      # C++ (for rebuilding hxcpp)
-      #- gcc-multilib
-      #- g++-multilib
-      # Python
-      #- python3
-      # C#
-      #- mono-devel
-      #- mono-mcs
       # Flash
       - libglib2.0
       - libfreetype6
-      # Lua
-      #- cmake3
-      #- lua5.1
-      #- luarocks
-      #- libpcre3-dev
-      #- libssl-dev
 
 install:
-  # os-specific config
-  #- if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-  #    export DISPLAY=:99.0;
-  #    export AUDIODEV=null;
-  #    phpenv global 7.0;
-  #  elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then
-  #    brew update;
-  #    brew install mono;
-  #    brew install phantomjs;
-  #    brew upgrade python;
-  #    brew install php;
-  #  fi
-  # Haxe Lua dependencies
-  #- if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-  #    sudo luarocks install luasec OPENSSL_LIBDIR=/usr/lib/x86_64-linux-gnu;
-  #    sudo luarocks install lrexlib-pcre PCRE_LIBDIR=/usr/lib/x86_64-linux-gnu;
-  #    sudo luarocks install luabitop;
-  #  elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then
-  #    brew install lua luarocks pcre python;
-  #    sudo luarocks install lrexlib-pcre;
-  #    sudo luarocks install luasocket;
-  #  fi
-  #- sudo luarocks install luv
-  #- sudo luarocks install environ
-  #- sudo luarocks install luautf8
   # Download and setup a standalone flash player debugger
-  - haxe flash/install.hxml
+  - haxe Tests/flash/install.hxml
   # Install haxelibs
-  #- if [ "${TRAVIS_HAXE_VERSION}" = "development" ]; then
-  #    haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp.git;
-  #    pushd $(haxelib path hxcpp | head -1);
-  #      pushd tools/hxcpp; haxe compile.hxml; popd;
-  #      pushd project; neko build.n; popd;
-  #    popd;
-  #  else
-  #    haxelib install hxcpp;
-  #  fi
-  #- haxelib install hxjava
-  #- haxelib install hxcs
   - haxelib list
 
 script:
-  #- haxe build-interp.hxml
-  #- haxe build-neko.hxml         && neko bin/HelloWorld.n
-  - haxe build-js.hxml           && node bin/Run.js
-                                 #&& haxe phantomjs/run.hxml bin/HelloWorld.js
-  #- haxe build-java.hxml         && java -jar bin/HelloWorld.jar
-  #- haxe build-php.hxml          && php bin/index.php
-  #- haxe build-cs.hxml           && mono bin/bin/HelloWorld.exe
-  - haxe build-flash.hxml -D fdb && haxe flash/run.hxml bin/Run.swf
-  #- haxe build-cpp.hxml          && ./bin/HelloWorld
-  #- haxe build-python.hxml       && python3 bin/HelloWorld.py
-  #- haxe build-lua.hxml          && lua bin/HelloWorld.lua
+  - haxe Tests/build-js.hxml           && node Tests/bin/Run.js
+  - haxe Tests/build-flash.hxml -D fdb && haxe Tests/flash/run.hxml Tests/bin/Run.swf
